<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.ContactoActivity"
    tools:showIn="@layout/activity_contacto">

    <LinearLayout
        android:id="@+id/contacto_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_concacto_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_phone_in_talk_black_24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:ems="10"
            android:text="670 402 486"
            android:id="@+id/contacto_txt_phone"
            android:clickable="true"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/contacto_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contacto_phone"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_contacto_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_email_black_24dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:ems="10"
            android:text="info@toledoguiado.es"
            android:id="@+id/contacto_txt_email"
            android:clickable="true"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/titulo_informacion_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/contacto_email"
        android:text="@string/etiqueta_info_contacto"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <LinearLayout
    android:id="@+id/area_contacto_nombre"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/titulo_informacion_usuario"
    android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_contacto_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            >

            <EditText
                android:id="@+id/campo_contacto_nombre_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/contacto_sunombre"
                android:inputType="text"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/area_contacto_su_eamail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/area_contacto_nombre"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_contacto_suemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp">

            <EditText
                android:id="@+id/campo_contacto_suemail_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/contacto_suemail"
                android:inputType="text"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
    android:id="@+id/area_contacto_asunto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/area_contacto_su_eamail"
    android:orientation="horizontal">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_contacto_asunto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp">

        <EditText
            android:id="@+id/campo_contacto_asunto_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/contacto_asunto"
            android:inputType="text"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>

    <LinearLayout
        android:id="@+id/area_contacto_mensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/area_contacto_asunto"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_contacto_mensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp">

            <EditText
                android:id="@+id/campo_contacto_mensaje_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/contacto_mensaje"
                android:inputType="textMultiLine"
                android:lines="5"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

<!--


    Asunto

    Su mensaje-->

</RelativeLayout>
